testsuite/tests/formatting/margins.ocaml.reference
Line 4, characters 0-3:
4 | let () = Format.pp_set_margin Format.std_formatter 80
    ^^^
Error: Syntax error


Line 3, characters 0-0:
Error: Syntax error

